apps/home-automation/homeassistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 80
      targetPort: http
