apps/home-automation/homeassistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
spec:
  defaultBackend:
    service:
      name: homeassistant
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - fairy-ha
